<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_recipes"
        android:icon="@drawable/ic_nutrition"
        android:title="@string/nutrition" />

    <item
        android:id="@+id/navigation_health"
        android:icon="@drawable/heat"
        android:title="@string/title_health" />

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_quiz"
        android:title="@string/quiz" />

<!--
    <item
        android:id="@+id/navigation_garden"
        android:icon="@drawable/ic_baseline_eco_24"
        android:visible="false"
        android:title="@string/garden" />
-->

  <!--  <item
        android:id="@+id/child_navigation"
        android:icon="@drawable/ic_baby_solid"
        android:visible="false"
        android:title="@string/child" />
-->

    <item
        android:id="@id/navigation_profile"
        android:icon="@drawable/doctor"
        android:title="@string/doctor"/>


</menu>

