<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.doctor.activity.AddAppointmentActivity">

    <include
        android:id="@+id/add_appointment_tool_bar"
        layout="@layout/tool_bar_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_appointment_tool_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/appointment_for_constrain_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/appointment_for"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/select_plan_constrain_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:focusable="false"
                        android:translationX="0dp"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="#E0E0E0"
                        app:hintEnabled="false"
                        app:boxStrokeWidth="0.1dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                            android:id="@+id/select_child_auto_tv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/select_a_child"
                            android:padding="0dp"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/text_color"
                            android:textSize="14sp"
                            android:translationY="0dp">

                        </androidx.appcompat.widget.AppCompatAutoCompleteTextView>
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/doctors_name_constrain_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointment_for_constrain_layout">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/doctor_s_name"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:focusable="false"
                        android:translationX="0dp"
                        app:hintEnabled="false"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="#E0E0E0"
                        app:boxStrokeWidth="0.1dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/doctor_name_tv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/doctor_s_name"
                            android:padding="0dp"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/text_color"
                            android:textSize="14sp"
                            android:translationY="0dp">

                        </androidx.appcompat.widget.AppCompatEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/health_center_constrain_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/doctors_name_constrain_layout">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/hospital_health_center"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/select_health_center_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:focusable="false"
                        android:translationX="0dp"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="#E0E0E0"
                        app:boxStrokeWidth="0.1dp"
                        app:hintEnabled="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/health_center_auto_tv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/hospital_health_center"
                            android:padding="0dp"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/text_color"
                            android:textSize="14sp"
                            android:translationY="0dp">

                        </androidx.appcompat.widget.AppCompatEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/appointment_date_time_constrain_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/health_center_constrain_layout">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/appointment_date_time"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:focusable="false"
                        android:translationX="0dp"
                        app:hintEnabled="false"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="#E0E0E0"
                        app:boxStrokeWidth="0.1dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/appointment_date_time_tv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="YYYY/MM/DD HH:MM "
                            android:padding="0dp"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:focusable="false"
                            android:clickable="false"
                            android:textColor="@color/black"
                            android:textColorHint="@color/text_color"
                            android:textSize="14sp"
                            android:translationY="0dp">

                        </androidx.appcompat.widget.AppCompatEditText>
                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/calendar_select"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_calendar"
                    android:translationX="-5dp"
                    android:translationY="7dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/constraintLayout3"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/done"
                app:backgroundTint="@color/Orange"
                app:cornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@+id/appointment_date_time_constrain_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>